--- a/NAM/res/layout/chat_list_item_right_aligned.xml
+++ b/NAM/res/layout/chat_list_item_right_aligned.xml
@@ -5,6 +5,7 @@
     android:layout_alignParentRight="true" >
 
     <ImageView
+        android:contentDescription="@string/avatar_description"
         android:id="@+id/avatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -25,16 +26,16 @@
         android:layout_marginTop="2dp"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:textSize="10sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="20dip"
+        android:layout_marginRight="5dip"
         android:layout_toLeftOf="@+id/avatar"
         android:ellipsize="marquee"
-        android:gravity="center" />
+        android:gravity="center_vertical|right" />
 
 </RelativeLayout>
