--- a/NAM/res/menu/main.xml
+++ b/NAM/res/menu/main.xml
@@ -5,12 +5,12 @@
     <item
         android:id="@+id/action_add"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="Add"
+        android:title="@string/add_action"
         yourapp:showAsAction="always"/>
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_launcher"
-        android:showAsAction="ifRoom"
-        android:title="Settings"/>
+        android:icon="@android:drawable/ic_menu_manage"
+        yourapp:showAsAction="ifRoom"
+        android:title="@string/settings_action"/>
 
 </menu>
