[DG,SR]{refactoring} R8 - minor fixes

--- a/NAM/res/layout/chat_list_item_left_aligned.xml
+++ b/NAM/res/layout/chat_list_item_left_aligned.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:adjustViewBounds="true"
         android:gravity="center_vertical"
-        android:scaleType="centerInside" />
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/text1"
