--- a/NAM/res/layout/chat_list_item_left_aligned.xml
+++ b/NAM/res/layout/chat_list_item_left_aligned.xml
@@ -8,8 +8,8 @@
     <ImageView
         android:contentDescription="@string/avatar_description"
         android:id="@+id/avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dip"
+        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:adjustViewBounds="true"
         android:gravity="center_vertical"
