--- a/NAM/res/layout/chat_list_item_right_aligned.xml
+++ b/NAM/res/layout/chat_list_item_right_aligned.xml
@@ -8,7 +8,7 @@
         android:contentDescription="@string/avatar_description"
         android:id="@+id/avatar"
         android:layout_width="60dip"
-        android:layout_height="60dip"
+        android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dip"
         android:adjustViewBounds="true"
